welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:25: error: not enough arguments for method setPos: (x$1: Int, x$2: Int)Unit.
Unspecified value parameter x$2.
    setPos(d-getMondeLargeur()+1)
          ^