welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
var diag = 0;

override def run() {
  var compteur = 1
  
  ecritMessage(0)
  while(!fin()) {
    diag = parcoursDiag(getX(),getY(),diag)
    ecritMessage(compteur)
    compteur =compteur+1
  }
}

def fin() :Boolean={
  if (getX()==getMondeLargeur()-1 && getY()==getMondeHauteur()-1) return true
  else return false
}


def parcoursDiag(x:Int,y:Int,d:Int) :Int={
  if (y==0 && d<getMondeLargeur()) {
    setPos(0,d)
    return (d+1)
  }
  else if (y==0 && d>=getMondeLargeur()) {
    setPos(d-getMondeLargeur()+1)
    return (d+1)
  }
  else {
    setPos(x+1,y-1)
    return(d)
  }

}